# magicmodel-python3

./: README.md  pyproject.toml
docs/plans/: 2026-06-12-comparison-operators-and-gsi.md
src/magicmodel/: __init__.py  exceptions.py  model.py  operator.py  query.py  serialization.py  types.py
tests/: conftest.py  test_comparison_operators.py  test_crud.py  test_gsi.py  test_nested_models.py  test_query.py  test_soft_delete.py
