[project]
name = "magicmodel"
version = "0.2.0"
description = "Python DynamoDB ORM inspired by magicmodel-go"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "boto3>=1.28.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "testcontainers>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "boto3-stubs[dynamodb]>=1.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magicmodel"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
